objects/disco__Youreka_Mobile_Log__c.object
<CustomObject>
    <description>Optionally logs mobile saves</description>
    <fields>
        <fullName>disco__Call_Result__c</fullName>
        <description>Result of call, including any errors</description>
        <inlineHelpText>Result of call, including any errors</inlineHelpText>
        <label>Call Result</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Device__c</fullName>
        <label>Device</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Exception_Error__c</fullName>
        <label>Exception Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Type_of_Save__c</fullName>
        <label>Type of Save</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Offline Sync</fullName>
                </value>
                <value>
                    <fullName>Online Save</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Youreka Mobile Log</label>
    <listViews>
        <fullName>disco__All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Youreka Mobile Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Youreka Mobile Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>